# suggest_posts_tgbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 1882c7ca9d14_add_models.py  31603f4f8430_init.py  47481498c3df_change_approved_to_status.py  7a16d9ae9b38_initial.py
src/: database.py  logging_conf.py  logging_conf.yml  main.py  models.py
src/database/: bot.db  engine.py  models.py
src/filters/: __init__.py  admin_filter.py
src/handlers/: admin.py  user.py
src/keyboards/inline/: inline_admin.py
src/middlewares/: __init__.py  database.py  user_register.py
